<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_verificationbg"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/view_background" />


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:orientation="vertical"
       app:layout_constraintGuide_percent="0.18357664" />

    <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        app:layout_constraintGuide_percent="0.783455" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <TextView
        android:id="@+id/verificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/panton_bold_regular"
        android:text="@string/app_verification_title"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/verificationText"
        android:layout_width="233dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/panton_bold_regular"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/app_verification_description"
        android:textAlignment="center"
        android:textColor="@color/fontColorLight"
        android:textStyle="bold"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="222dp"
        android:layout_height="27dp"
        android:layout_marginEnd="108dp"
        android:text="@string/stack_is_required"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/errorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/edittext"
        android:dropDownSelector="@drawable/ic_drop_down"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationText" />

    <EditText
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/ic_phone_icon"
        android:elevation="9dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/code"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="222dp"
        android:layout_height="27dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/please_input_a_correct_code"
        android:textAlignment="center"
        android:textColor="@color/errorColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:elevation="10dp"
        android:src="@drawable/ic_drop_down"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintRight_toRightOf="@id/spinner"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/submit_background"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />


</androidx.constraintlayout.widget.ConstraintLayout>