<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/ic_getstartedbg"
      android:contentDescription="view_background1"
      android:scaleType="centerCrop"
      tools:layout_editor_absoluteX="-16dp"
      tools:layout_editor_absoluteY="-256dp" />

  <TextView
      android:id="@+id/get_started_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="324dp"
      android:fontFamily="@font/panton_bold_regular"
      android:text="@string/app_get_started_title"
      android:textColor="@color/darkFontColor"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView" />

  <TextView
      android:id="@+id/teach_description"
      android:layout_width="209dp"
      android:layout_height="52dp"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/panton_bold_regular"
      android:text="@string/app_get_started_description"
      android:textAlignment="center"
      android:textSize="@dimen/small"
      android:textStyle="bold"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/get_started_title" />

  <Button
      android:id="@+id/sign_up"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="44dp"
      android:layout_marginEnd="60dp"
      android:background="@drawable/rounded_button_light_green"
      android:text="@string/app_signup"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/teach_description" />

  <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_darkgreen"

        android:text="@string/app_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>